# realtime-transcription-summarizer

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py  models.py  summarization.py  transcription.py
static/: app.js  index.html
tests/: test_main.py  test_models.py  test_summarization.py  test_transcription.py
