[project]
name = "realtime-transcription-summarizer"
version = "0.1.0"
description = "Real-time audio transcription and summarization using OpenAI APIs"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "openai",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "hypothesis",
]
